tests/ui/empty/empty-linkname.rs
#[link(name = "")] //~ ERROR: link name must not be empty
extern "C" {}

fn main() {}
